--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         </div>
                         <a href="contact.html" class="nav-item nav-link">Contact</a>
                     </div>
-                    <a href="" class="btn rounded-pill py-2 px-4 ms-3 d-none d-lg-block">MEET US</a>
+                    <a href="" class="btn rounded-pill py-2 px-4 ms-3 d-none d-lg-block">CONTACT US</a>
                 </div>
             </nav>
 
